--- a/XITO.html
+++ b/XITO.html
@@ -7,6 +7,7 @@
     <title>Online Edu</title>
 
     <link rel="stylesheet" href="css/indexCSS/Nav & Hero.css">
+    <link rel="stylesheet" href="css/indexCSS/teachers.css">
 </head>
 <body>
     <div class="container">
@@ -21,7 +22,7 @@
             <nav>
                 <div class="wrapper">
                     <div class="logo">
-                        <a href="home.html"><img src="#" alt="logo" id="logo"></a>
+                        <a href="home.html"><img src="img/logo/logo.png" alt="logo" id="logo"></a>
                     </div>
                     <div class="menu">
                         <ul class="navMenu">
@@ -129,6 +130,132 @@
                     <a href="#" class="see_more">
                         <button>See More</button>
                     </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Teachers -->
+        <section class="discover_teachers">
+            <div class="wrapper">
+                <div class="teachers">
+                    <p>MEET OUR STAFF</p>
+                    <h2>DISCOVER OUR TEACHERS</h2>
+                    <div class="gallery">
+                        <div class="teacher_card">
+                            <div class="img">
+                                <img src="img/teachers/teacher3.png" alt="teacher">
+                            </div>
+                            <div class="text">
+                                <h3>Shirley Smith</h3>
+                                <p>Hello, I’m a teacher, real man you alway see in your TV. Surprise, i’m also a photography teacher.</p>
+                            </div>
+                            <div class="socmed">
+                                <ul>
+                                    <li>
+                                        <a href="#"><img src="img/icon/facebook.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="img/icon/twitter.png" alt=""></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="teacher_card">
+                            <div class="img">
+                                <img src="img/teachers/teacher.png" alt="teacher">
+                            </div>
+                            <div class="text">
+                                <h3>Shirley Smith</h3>
+                                <p>Hello, I’m a teacher, real man you alway see in your TV. Surprise, i’m also a photography teacher.</p>
+                            </div>
+                            <div class="socmed">
+                                <ul>
+                                    <li>
+                                        <a href="#"><img src="img/icon/facebook.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="img/icon/twitter.png" alt=""></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="teacher_card">
+                            <div class="img">
+                                <img src="img/teachers/teacher.png" alt="teacher">
+                            </div>
+                            <div class="text">
+                                <h3>Shirley Smith</h3>
+                                <p>Hello, I’m a teacher, real man you alway see in your TV. Surprise, i’m also a photography teacher.</p>
+                            </div>
+                            <div class="socmed">
+                                <ul>
+                                    <li>
+                                        <a href="#"><img src="img/icon/facebook.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="img/icon/twitter.png" alt=""></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="teacher_card">
+                            <div class="img">
+                                <img src="img/teachers/teacher.png" alt="teacher">
+                            </div>
+                            <div class="text">
+                                <h3>Shirley Smith</h3>
+                                <p>Hello, I’m a teacher, real man you alway see in your TV. Surprise, i’m also a photography teacher.</p>
+                            </div>
+                            <div class="socmed">
+                                <ul>
+                                    <li>
+                                        <a href="#"><img src="img/icon/facebook.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="img/icon/twitter.png" alt=""></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="teacher_card">
+                            <div class="img">
+                                <img src="img/teachers/teacher2.png" alt="teacher">
+                            </div>
+                            <div class="text">
+                                <h3>Shirley Smith</h3>
+                                <p>Hello, I’m a teacher, real man you alway see in your TV. Surprise, i’m also a photography teacher.</p>
+                            </div>
+                            <div class="socmed">
+                                <ul>
+                                    <li>
+                                        <a href="#"><img src="img/icon/facebook.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="img/icon/twitter.png" alt=""></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="teacher_card">
+                            <div class="img">
+                                <img src="img/teachers/teacher1.png" alt="teacher">
+                            </div>
+                            <div class="text">
+                                <h3>Shirley Smith</h3>
+                                <p>Hello, I’m a teacher, real man you alway see in your TV. Surprise, i’m also a photography teacher.</p>
+                            </div>
+                            <div class="socmed">
+                                <ul>
+                                    <li>
+                                        <a href="#"><img src="img/icon/facebook.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="img/icon/twitter.png" alt=""></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
