add classes for style

--- a/contact/tita.html
+++ b/contact/tita.html
@@ -84,13 +84,13 @@
               </div>
               <span class="getInTouchIconName">Location</span>
             </div>
-            <div class="getInTouchData">
+            <div class="getInTouchData one">
               <h3>Weifield Group Contracting</h3>
               <div class="info">
                 <p>6950 S. Jordan Road Centennial, CO 80112</p>
               </div>
             </div>
-            <div class="getInTouchData">
+            <div class="getInTouchData two">
               <h3>Weifield Group Contracting</h3>
               <div class="info">
                 <p>6950 S. Jordan Road Centennial, CO 80112</p>
@@ -104,13 +104,13 @@
               </div>
               <span class="getInTouchIconName">Number</span>
             </div>
-            <div class="getInTouchData">
+            <div class="getInTouchData one">
               <h3>Weifield Group Contracting</h3>
               <div class="info">
                 <p>877.WEIFIELD phone 303.202.0466 facsimile</p>
               </div>
             </div>
-            <div class="getInTouchData">
+            <div class="getInTouchData two">
               <h3>Weifield 24/7 Service Department</h3>
               <div class="info">
                 <p id="dataWeird">877.WEIFIELD <br> (Then press 0 for emergency calls)</p>
