--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h1><span id="text">Education</span> is the key to all the locked doors of the unknown.</h1>
                         <p>Learn essential tech skills with KodeGo’s online bootcamps and land your dream career in as
                             fast as 12 weeks.</p>
-                        <button class="btnSeeCourses" data-aos="flip-left">See Courses</button>
+                        <button class="btnSeeCourses" >See Courses</button>
                     </div>
 
                     <div class="heroBanner">
