--- a/note/index.html
+++ b/note/index.html
@@ -21,19 +21,15 @@
         </div>
 
         <div id="main-add" class="text-input">
-            <form action="#" method="post">
-            <textarea id="head" name="note"></textarea>
+            
+            <input  id="head" type="text" required>
+            <i id="errorhead"></i>
             <textarea id="body" name="note"></textarea>
+            <i id="error"></i>
             <div><button type="submit" id="save">Save</button></div>
-            </form>
         </div>
         <div class="text-note">
             <div class="box-note">
-                <h4 id="headSaved" class="title">My Note</h4>
-                <p id="bodySaved">Lorem, ipsum.</p>
-                <div class="date">
-                    <label>June 29 2020</label>
-                </div>
             </div>
         </div>
     </aside>
