--- a/dashboard/Lesson 1.html
+++ b/dashboard/Lesson 1.html
@@ -75,15 +75,14 @@
          <section>
             <div class="video-course">
                <div class="vid-box">
-                  <img src="/assets/Rectangle 315.png" alt="">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/NybHckSEQBI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </div>
                <div>
-                  <h2>Lesson 1 - Arithmetic</h2>
+                  <h2>Algebra Basics: What Is Algebra?</h2>
                </div>
                <div class="description">
-                  <h3>Arithmetic?</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nam, ducimus dolores eum
-                     impedit quibusdam deserunt ipsam repellendus,deserunt ipsam repellendus...</p>
+                  <h3>Algebra?</h3>
+                  <p>This video gives an overview of Algebra and introduces the concepts of unknown values and variables. It also explains that multiplication is implicit in Algebra.</p>
                </div>
             </div>
          </section>
@@ -111,10 +110,10 @@
                   </div>
 
                   <div class="main-lesson">
-                     <div id="selected">
-                        <a href="#" class="card-course">
+                     <a id="selected">
+                        <a href="/dashboard/Lesson2.html" class="card-course">
                            <div class="text-course">
-                              <h4>Lesson 1 - Algebra</h4>
+                              <h4>Lesson 2 - Polynomials</h4>
                               <p>Browse Math Lesson Plans. Award winning educational materials designed to
                                  help kids succeed. Start for free now!</p>
                            </div>
@@ -122,13 +121,13 @@
                               <i class="fa-solid fa-circle-play"></i>
                            </div>
                         </a>
-                     </div>
+                     </a>
 
                      <div class="main-lesson">
                         <div id="selected">
-                           <a href="#" class="card-course">
+                           <a href="/dashboard/lesson3.html" class="card-course">
                               <div class="text-course">
-                                 <h4>Lesson 1 - Algebra</h4>
+                                 <h4>Lesson 3 - Arithmetic</h4>
                                  <p>Browse Math Lesson Plans. Award winning educational materials designed to
                                     help kids succeed. Start for free now!</p>
                               </div>
