--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
             <div class="menu">
                 <ul class="navMenu">
-                    <li class="navList">
-                        <a href="#" class="navLink">Home</a>
+                    <li class="navList active-nav">
+                        <a href="#" class="navLink active-nav-a">Home</a>
                     </li>
                     <li class="navList">
                         <a href="#" class="navLink">My Course</a>
