Minor revision of text content

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <img src="Graphics/about us.png" class="d-none d-xxl-block img-fluid w-50" alt="img1">
             <div class="">
                 <h1 id="text1" class="mx-5 display-1" style="color: #484349;">the OnlineEdu</h1>
-                <h2 id="text2" class=" mx-5 text-center" style="color: #484349;">Our goal is to create the best possible online elementary learning platform without having to pay for the learning services we offer. If we succeed with this, it will give kids a very creative way of learning. Regardless of where they live and the size of their wallets.
+                <h2 id="text2" class=" mx-5 text-center" style="color: #484349;">Our goal is to create the best possible online elementary learning platform without having to pay for the learning services we offer. If we succeed with this, it will give children a very creative way of learning. Regardless of where they live and the size of their wallets.
                 </br><span>
                     To achieve this, we have created multiple modules, excercises and visual representation of the most popular subjects in Elementary education. This will provide a remote learning system for kids that could help them learn a lot while having fun.
                 </span>
