--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="about.css">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
     <!-- First section -->
@@ -14,7 +14,7 @@
         <div class="d-lg-flex justify-content-center align-items-center" id="div1">
             <img src="Graphics/about us.png" class="d-none d-xxl-block img-fluid w-50" alt="img1">
             <div class="">
-                <h1 id="text1" class="mx-5 display-1" style="color: #484349;">the OnlineEdu</h1>
+                <h1 id="text1" class="mx-5 display-1" style="color: #484349;">the EduAcademy</h1>
                 <h2 id="text2" class=" mx-5 text-center" style="color: #484349;">Our goal is to create the best possible online elementary learning platform without having to pay for the learning services we offer. If we succeed with this, it will give children a very creative way of learning. Regardless of where they live and the size of their wallets.
                 </br><span>
                     To achieve this, we have created multiple modules, excercises and visual representation of the most popular subjects in Elementary education. This will provide a remote learning system for kids that could help them learn a lot while having fun.
@@ -29,7 +29,7 @@
         <h1 class="display-1" id="text3">the Team</h1>
 
     </section>
-    <section class="d-flex justify-content-around align-items-center text-center py-3 gap-5 flex-wrap" id="sec3">
+    <section class="d-flex justify-content-center align-items-center text-center py-3 gap-5 flex-wrap" id="sec3">
         <div class="" id="team1">
             <img src="Graphics/AvatarMaker (7).png" class="img-fluid" alt="" id="img2">
             <h3 class="display-3 my-3" 
