--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
         <h1 class="display-1" id="text3">the Team</h1>
 
     </section>
+    <!-- team section -->
     <section class="d-flex justify-content-center align-items-center text-center py-3 gap-5 flex-wrap" id="sec3">
         <div class="" id="team1">
             <img src="Graphics/AvatarMaker (7).png" class="img-fluid" alt="" id="img2">
