Files updated from local repository

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="about.css">
-    <title>About</title>
+    <title>Document</title>
 </head>
 <body>
     <!-- First section -->
@@ -14,8 +14,8 @@
         <div class="d-lg-flex justify-content-center align-items-center" id="div1">
             <img src="Graphics/about us.png" class="d-none d-xxl-block img-fluid w-50" alt="img1">
             <div class="">
-                <h1 id="text1" class="mx-5 display-1" style="color: #484349;">the EduAcademy</h1>
-                <h2 id="text2" class=" mx-5 text-center" style="color: #484349;">Our goal is to create the best possible online elementary learning platform without having to pay for the learning services we offer. If we succeed with this, it will give children a very creative way of learning. Regardless of where they live and the size of their wallets.
+                <h1 id="text1" class="mx-5 display-1" style="color: #484349;">the OnlineEdu</h1>
+                <h2 id="text2" class=" mx-5 text-center" style="color: #484349;">Our goal is to create the best possible elementary school without having to pay for the learning services we offer. If we succeed with this, it will give kids a very creative way of learning. Regardless of where they live and the size of their wallets.
                 </br><span>
                     To achieve this, we have created multiple modules, excercises and visual representation of the most popular subjects in Elementary education. This will provide a remote learning system for kids that could help them learn a lot while having fun.
                 </span>
@@ -30,9 +30,9 @@
 
     </section>
     <!-- team section -->
-    <section class="d-flex justify-content-center align-items-center text-center py-3 gap-5 flex-wrap" id="sec3">
+    <section class="d-flex justify-content-around align-items-center text-center py-3 gap-5 flex-wrap" id="sec3">
         <div class="" id="team1">
-            <img src="Graphics/AvatarMaker (7).png" class="img-fluid" alt="" id="img2">
+            <img src="Graphics/AvatarProfile/AvatarMaker (7).png" class="img-fluid" alt="" id="img2">
             <h3 class="display-3 my-3" 
             style="font-size: 30px;
             font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
@@ -43,7 +43,7 @@
             >Bringing children a fun way to learn.</h6>
         </div>
         <div class="" id="team1">
-            <img src="Graphics/AvatarMaker (1).png" class="img-fluid" alt="" id="img2">
+            <img src="Graphics/AvatarProfile/AvatarMaker (1).png" class="img-fluid" alt="" id="img2">
             <h3 class="display-3 my-3" 
             style="font-size: 30px;
             font-weight: bold;
@@ -54,7 +54,7 @@
             >Making sure the quality of learning we give is superb.</h6>
         </div>
         <div class="ter flex-wrap" id="team1">
-            <img src="Graphics/AvatarMaker (2).png" class="img-fluid" alt="" id="img2">
+            <img src="Graphics/AvatarProfile/AvatarMaker (2).png" class="img-fluid" alt="" id="img2">
             <h3 class="display-3 my-3" 
             style="font-size: 30px;
             font-weight: bold;
@@ -65,7 +65,7 @@
             >Preparing creative excercises to test what you've learned.</h6>
         </div>
         <div class="" id="team1">
-            <img src="Graphics/AvatarMaker (3).png" class="img-fluid" alt="" id="img2">
+            <img src="Graphics/AvatarProfile/AvatarMaker (3).png" class="img-fluid" alt="" id="img2">
             <h3 class="display-3 my-3"
             style="font-size: 30px;
             font-weight: bold;
@@ -76,7 +76,7 @@
             >Leading the team to follow the track.</h6>
         </div>
         <div class="" id="team1">
-            <img src="Graphics/AvatarMaker (4).png" class="img-fluid" alt="" id="img2">
+            <img src="Graphics/AvatarProfile/AvatarMaker (4).png" class="img-fluid" alt="" id="img2">
             <h3 class="display-3 my-3"
             style="font-size: 30px;
             font-weight: bold;
@@ -87,7 +87,7 @@
             >Providing creative designs and layout.</h6>
         </div>
         <div class="" id="team1">
-            <img src="Graphics/AvatarMaker (5).png" class="img-fluid" alt="" id="img2">
+            <img src="Graphics/AvatarProfile/AvatarMaker (5).png" class="img-fluid" alt="" id="img2">
             <h3 class="display-3 my-3"
             style="font-size: 30px;
             font-weight: bold;
@@ -98,6 +98,30 @@
             >Giving ideas that helps to improve the platform.</h6>
         </div>
 
+    </section>
+    <!-- key supporters -->
+    <section class="d-flex justify-content-center align-items-center p-5 text-center flex-wrap" id="sec2"
+    style="
+    background-color: rgb(169, 243, 228);
+    height: auto;
+    width: 100vw;"
+    >
+        <h1 class="display-4" 
+        style="
+        font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+        font-weight: bold;
+        font-size: clamp(20px, 10vw, 40px);"
+        >Key Supporters</h3>
+        <div class="d-flex justify-content-center align-items-center pt-4 gap-5 flex-wrap">
+            <img src="Graphics/KeySupporters/image 7.png" alt="">
+            <img src="Graphics/KeySupporters/image 8.png" alt="">
+            <img src="Graphics/KeySupporters/image 9.png" alt="">
+            <img src="Graphics/KeySupporters/image 10.png" alt="">
+            <img src="Graphics/KeySupporters/image 11.png" alt="">
+            <img src="Graphics/KeySupporters/image 12.png" alt="">
+            <img src="Graphics/KeySupporters/image 13.png" alt="">
+            <img src="Graphics/KeySupporters/image 14.png" alt="">
+        </div>
     </section>
 </body>
 </html>
