--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
             font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
             font-weight: bold;
             color: whitesmoke;"
-            >EduAcademyBlog</h1>
+            >OnlineEduBlog</h1>
             <h4
             style="
             color: whitesmoke;"
@@ -29,7 +29,7 @@
     background-color: whitesmoke;"
     >
         <div class="d-xl-flex justify-content-center align-items-center">
-            <img src="Graphics/math_blog.png" alt="math.png" class="img-fluid"
+            <img src="Graphics/BlogThumbnails/math_blog.png" alt="math.png" class="img-fluid"
             style="
             height: 500px;
             width: 640px;"
@@ -50,7 +50,7 @@
                 >Here are the list showing the most challenging excercises for elementary mathematics. <br>
                 This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
-                    <img src="Graphics/AvatarMaker (2).png" alt="josh.png"
+                    <img src="Graphics/AvatarProfile/AvatarMaker (2).png" alt="josh.png"
                     style="
                     height: 70px;
                     width: 70px;
@@ -76,7 +76,7 @@
     background-color: white;"
     >
         <div class="d-xl-flex justify-content-center align-items-center">
-            <img src="Graphics/science_blog.png" alt="science.png" class="img-fluid"
+            <img src="Graphics/BlogThumbnails/science_blog.png" alt="science.png" class="img-fluid"
             style="
             height: 500px;
             width: 640px;"
@@ -97,7 +97,7 @@
                 >Listed here are the complete list of science experiments that you will surely enjoy.<br>
                 This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
-                    <img src="Graphics/AvatarMaker (7).png" alt="alger.png"
+                    <img src="Graphics/AvatarProfile/AvatarMaker (7).png" alt="alger.png"
                     style="
                     height: 70px;
                     width: 70px;
@@ -123,7 +123,7 @@
     background-color: whitesmoke;"
     >
         <div class="d-xl-flex justify-content-center align-items-center">
-            <img src="Graphics/problem_blog.png" alt="problem.png" class="img-fluid"
+            <img src="Graphics/BlogThumbnails/problem_blog.png" alt="problem.png" class="img-fluid"
             style="
             height: 500px;
             width: 640px;"
@@ -145,7 +145,7 @@
                 >I have prepared 20 simple riddle excercises to improve your mathematical thinking. <br>
                 This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
-                    <img src="Graphics/AvatarMaker (3).png" alt="June.png"
+                    <img src="Graphics/AvatarProfile/AvatarMaker (3).png" alt="June.png"
                     style="
                     height: 70px;
                     width: 70px;
@@ -171,7 +171,7 @@
     background-color: white;"
     >
         <div class="d-xl-flex justify-content-center align-items-center">
-            <img src="Graphics/earth_blog.png" alt="earth.blog" class="img-fluid"
+            <img src="Graphics/BlogThumbnails/earth_blog.png" alt="earth.blog" class="img-fluid"
             style="
             height: 500px;
             width: 640px;"
@@ -192,7 +192,7 @@
                 >Below are the links of interesting short videos about how Earth was created. <br>
                 This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
-                    <img src="Graphics/AvatarMaker (4).png" alt="xito.png"
+                    <img src="Graphics/AvatarProfile/AvatarMaker (4).png" alt="xito.png"
                     style="
                     height: 70px;
                     width: 70px;
@@ -218,7 +218,7 @@
     background-color: whitesmoke;"
     >
         <div class="d-xl-flex justify-content-center align-items-center">
-            <img src="Graphics/english_blog.png" alt="english.png" class="img-fluid"
+            <img src="Graphics/BlogThumbnails/english_blog.png" alt="english.png" class="img-fluid"
             style="
             height: 500px;
             width: 640px;"
@@ -239,7 +239,7 @@
                 >This blog contains compilation of english basic songs and short videos, <br>
                 This also includes the link of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
-                    <img src="Graphics/AvatarMaker (1).png" alt="jonard.png"
+                    <img src="Graphics/AvatarProfile/AvatarMaker (1).png" alt="jonard.png"
                     style="
                     height: 70px;
                     width: 70px;
@@ -265,7 +265,7 @@
     background-color: white;"
     >
         <div class="d-xl-flex justify-content-center align-items-center">
-            <img src="Graphics/geography_blog.png" alt="geography.png" class="img-fluid"
+            <img src="Graphics/BlogThumbnails/geography_blog.png" alt="geography.png" class="img-fluid"
             style="
             height: 500px;
             width: 640px;"
@@ -286,7 +286,7 @@
                 >Listed here are the coordinates of most famous geologic locations around the world. <br>
                 This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
-                    <img src="Graphics/AvatarMaker (5).png" alt="zac.png"
+                    <img src="Graphics/AvatarProfile/AvatarMaker (5).png" alt="zac.png"
                     style="
                     height: 70px;
                     width: 70px;
