--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
     </section>
     <!-- team section -->
-    <section class="d-flex justify-content-around align-items-center text-center py-3 gap-5 flex-wrap" id="sec3">
+    <section class="d-flex justify-content-center align-items-center text-center py-3 gap-5 flex-wrap" id="sec3">
         <div class="" id="team1">
             <img src="Graphics/AvatarProfile/AvatarMaker (7).png" class="img-fluid" alt="" id="img2">
             <h3 class="display-3 my-3" 
