--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
             font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
             font-weight: bold;
             color: whitesmoke;"
-            >OnlineEduBlog</h1>
+            >EduCademy</h1>
             <h4
             style="
             color: whitesmoke;"
