--- a/about.html
+++ b/about.html
@@ -11,11 +11,15 @@
 <body>
     <!-- First section -->
     <section class="d-xl-flex justify-content-center align-items-center p-1 text-center flex-wrap" id="sec1">
-        <div class="d-lg-flex justify-content-center align-items-center" id="div1">
+        <div class="d-lg-flex justify-content-center align-items-center py-5" id="div1">
             <img src="Graphics/about us.png" class="d-none d-xxl-block img-fluid w-50" alt="img1">
             <div class="">
-                <h1 id="text1" class="mx-5 display-1" style="color: #484349;">the OnlineEdu</h1>
-                <h2 id="text2" class=" mx-5 text-center" style="color: #484349;">Our goal is to create the best possible elementary school without having to pay for the learning services we offer. If we succeed with this, it will give kids a very creative way of learning. Regardless of where they live and the size of their wallets.
+                <h1 id="text1" class="mx-5 display-1" style="color: #484349;">the EduCademy</h1>
+                <h2 id="text2" class=" mx-5 text-center" 
+                style="
+                color: #484349;
+                font-size: 25px;"
+                >Our goal is to create the best possible elementary school without having to pay for the learning services we offer. If we succeed with this, it will give kids a very creative way of learning. Regardless of where they live and the size of their wallets.
                 </br><span>
                     To achieve this, we have created multiple modules, excercises and visual representation of the most popular subjects in Elementary education. This will provide a remote learning system for kids that could help them learn a lot while having fun.
                 </span>
