--- a/dashboard/Lesson 1.html
+++ b/dashboard/Lesson 1.html
@@ -100,11 +100,11 @@
                      <a href="#" class="card-course  cardActive">
                         <div class="text-course">
                            <h4>Lesson 1 - Algebra</h4>
-                           <p>Browse Math Lesson Plans. Award winning educational materials designed to help
+                           <p class="activeP">Browse Math Lesson Plans. Award winning educational materials designed to help
                               kids succeed. Start for free now!</p>
                         </div>
                         <div class="play">
-                           <i class="fa-solid fa-circle-play"></i>
+                           <i class="fa-solid fa-circle-play activeP"></i>
                         </div>
                      </a>
                   </div>
@@ -128,6 +128,21 @@
                            <a href="/dashboard/lesson3.html" class="card-course">
                               <div class="text-course">
                                  <h4>Lesson 3 - Arithmetic</h4>
+                                 <p >Browse Math Lesson Plans. Award winning educational materials designed to
+                                    help kids succeed. Start for free now!</p>
+                              </div>
+                              <div class="play">
+                                 <i class="fa-solid fa-circle-play"></i>
+                              </div>
+                           </a>
+                        </div>
+                     </div>
+
+                     <div class="main-lesson Quiz">
+                        <div id="selected">
+                           <a href="/dashboard/lesson3.html" class="card-course">
+                              <div class="text-course">
+                                 <h4>Quiz Challenge</h4>
                                  <p>Browse Math Lesson Plans. Award winning educational materials designed to
                                     help kids succeed. Start for free now!</p>
                               </div>
@@ -141,7 +156,7 @@
          </aside>
       </div>
    </main>
-
+   <script src="js/XITO.js"></script>
    <script src="/dashboard/js/maincourse.js"></script>
 </body>
 
