--- a/dashboard/Lesson2.html
+++ b/dashboard/Lesson2.html
@@ -114,11 +114,11 @@
                                 <a href="#" class="card-course cardActive">
                                     <div class="text-course">
                                         <h4>Lesson 2 -  Polynomials</h4>
-                                        <p>Browse Math Lesson Plans. Award winning educational materials designed to
+                                        <p class="activeP">Browse Math Lesson Plans. Award winning educational materials designed to
                                             help kids succeed. Start for free now!</p>
                                     </div>
                                     <div class="play">
-                                        <i class="fa-solid fa-circle-play"></i>
+                                        <i class="fa-solid fa-circle-play activeP"></i>
                                     </div>
                                 </a>
                             </div>
@@ -141,7 +141,7 @@
             </aside>
         </div>
     </main>
-
+    <script src="js/XITO.js"></script>
     <script src="/dashboard/js/maincourse.js"></script>
 </body>
 
