--- a/dashboard/lesson3.html
+++ b/dashboard/lesson3.html
@@ -125,14 +125,14 @@
 
                             <div class="main-lesson">
                                 <div id="selected">
-                                    <a href="#" class="card-course cardActive">
+                                    <a href="#" class="card-course cardActive activeP">
                                         <div class="text-course">
                                             <h4>Lesson 3 - Arithmetic</h4>
-                                            <p>Browse Math Lesson Plans. Award winning educational materials designed to
+                                            <p class="activeP">Browse Math Lesson Plans. Award winning educational materials designed to
                                                 help kids succeed. Start for free now!</p>
                                         </div>
                                         <div class="play">
-                                            <i class="fa-solid fa-circle-play"></i>
+                                            <i class="fa-solid fa-circle-play activeP"></i>
                                         </div>
                                     </a>
                                 </div>
@@ -141,7 +141,7 @@
             </aside>
         </div>
     </main>
-
+    <script src="js/XITO.js"></script>
     <script src="/dashboard/js/maincourse.js"></script>
 </body>
 
