--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/indexCSS/Testimonial.css">
     <link rel="stylesheet" href="/css/indexCSS/BLOG POST & EVENTS.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -79,7 +81,7 @@
             </div>
         </div>
     </nav>
-    <section class="container">
+    <section >
         <header>
             <!-- Background vectors, nag export nalang po ako ng img ksi hindi ko po alam kung paano sila ilagay hahaha. -->
             <div class="vectors">
@@ -439,7 +441,26 @@
             </div>
         </div>
     </section>
-
+    <section class="d-flex justify-content-center align-items-center p-5 text-center flex-wrap" id="sec2"
+    style="
+    height: auto;"
+    >
+        <h1 class="display-4" 
+        style="
+        font-weight: bold;
+        font-size: clamp(20px, 10vw, 40px);"
+        >Key Supporters</h3>
+        <div class="d-flex justify-content-center align-items-center pt-4 gap-5 flex-wrap">
+            <img src="KeySupporters/image 7.png" alt="">
+            <img src="KeySupporters/image 8.png" alt="">
+            <img src="KeySupporters/image 9.png" alt="">
+            <img src="KeySupporters/image 10.png" alt="">
+            <img src="KeySupporters/image 11.png" alt="">
+            <img src="KeySupporters/image 12.png" alt="">
+            <img src="KeySupporters/image 13.png" alt="">
+            <img src="KeySupporters/image 14.png" alt="">
+        </div>
+    </section>
 
     <footer>
         <div class="footer-container  ">
