--- a/blog.html
+++ b/blog.html
@@ -47,8 +47,8 @@
                 <h6 class="m-5 text-muted"
                 style="
                 font-size: 25px;"
-                >Here are the list showing the most challenging excercises for elementary mathematics. <br>
-                This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
+                >Here are the list showing the most challenging exercises for elementary mathematics. <br>
+                This also includes the links of lessons related to respective exercises. Each exercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
                     <img src="Graphics/AvatarProfile/AvatarMaker (2).png" alt="josh.png"
                     style="
@@ -95,7 +95,7 @@
                 style="
                 font-size: 25px;"
                 >Listed here are the complete list of science experiments that you will surely enjoy.<br>
-                This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
+                This also includes the links of lessons related to respective exercises. Each exercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
                     <img src="Graphics/AvatarProfile/AvatarMaker (7).png" alt="alger.png"
                     style="
@@ -143,7 +143,7 @@
                 style="
                 font-size: 25px;"
                 >I have prepared 20 simple riddle excercises to improve your mathematical thinking. <br>
-                This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
+                This also includes the links of lessons related to respective exercises. Each exercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
                     <img src="Graphics/AvatarProfile/AvatarMaker (3).png" alt="June.png"
                     style="
@@ -190,7 +190,7 @@
                 style="
                 font-size: 25px;"
                 >Below are the links of interesting short videos about how Earth was created. <br>
-                This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
+                This also includes the links of lessons related to respective exercises. Each exercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
                     <img src="Graphics/AvatarProfile/AvatarMaker (4).png" alt="xito.png"
                     style="
@@ -237,7 +237,7 @@
                 style="
                 font-size: 25px;"
                 >This blog contains compilation of english basic songs and short videos, <br>
-                This also includes the link of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
+                This also includes the link of lessons related to respective exercises. Each exercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
                     <img src="Graphics/AvatarProfile/AvatarMaker (1).png" alt="jonard.png"
                     style="
@@ -284,7 +284,7 @@
                 style="
                 font-size: 25px;"
                 >Listed here are the coordinates of most famous geologic locations around the world. <br>
-                This also includes the links of lessons related to respective excercises. Each excercises has no time limit so take your time!</h6>
+                This also includes the links of lessons related to respective exercises. Each exercises has no time limit so take your time!</h6>
                 <div class="d-flex justify-content-center">
                     <img src="Graphics/AvatarProfile/AvatarMaker (5).png" alt="zac.png"
                     style="
